tests/Unit/PHPStan/Rules/Naming/Fixtures/IterablePluralNaming/Valid/Node.php
<?php

declare(strict_types=1);

namespace IterablePluralNamingFixtures\Valid;

final class Node
{
}
