tests/Unit/PHPStan/Rules/Naming/Fixtures/IterablePluralNaming/Invalid/Node.php
<?php

declare(strict_types=1);

namespace IterablePluralNamingFixtures\Invalid;

final class Node
{
}
